--- a/src/styles/styles.sass
+++ b/src/styles/styles.sass
@@ -1,3 +1,21 @@
+//variables
+////colors
+$red: #b2001d
+$white: #fff
+$dark-grey: #333
+$medium-grey: #898989
+$light-grey: #dddddd
+$olive-black: #19200E
+$dark-olive: #33401C
+$olive: #556B2F
+$light-olive: #88976D
+$olive-grey: #EEF0EA
+$beans: #3d0000
+$dark-ruby: #8f0000
+$ruby: #CD0000
+$light-ruby: #dc4c4c
+$vashti: #fae5e5
+$weekend-blue: #eaf7ff
 
 html
   height: 100%
