--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -440,22 +440,37 @@ header .viewSelectBtn.active {
 }
 
 .shiftSettings {
-  display: block;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
   position: absolute;
   top: 200px;
   left: 40%;
   width: 250px;
-  padding: 50px;
+  padding: 25px;
   z-index: 8;
   background-color: #fff;
+  border-radius: 0.1875rem;
   box-shadow: 0 0.5rem 1rem 0 rgba(0, 0, 0, 0.2);
 }
 .shiftSettings.hidden {
   display: none;
 }
+.shiftSettings h1 {
+  flex: 1;
+  color: #19200E;
+}
 
 .exitIcon {
+  margin-right: 3px;
   display: none;
+}
+
+.editShiftList {
+  flex: 8;
+  margin-top: 10px;
+  width: 80%;
 }
 
 .editShiftListItem {
@@ -464,31 +479,66 @@ header .viewSelectBtn.active {
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
+  height: 1.5rem;
+  padding: 2px;
 }
 .editShiftListItem:hover {
-  background-color: #dddddd;
+  background-color: #EEF0EA;
 }
 .editShiftListItem:hover .exitIcon {
   display: inline;
-  color: #898989;
+  color: #88976D;
 }
 .editShiftListItem:hover .exitIcon:hover {
   color: #b2001d;
 }
 
 .editShiftInputArea {
+  flex: 1;
   width: 100%;
-  margin-top: 15px;
   display: flex;
+  height: 2rem;
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
 }
 .editShiftInputArea input {
   flex: 5;
+  height: 86%;
+  border-top-left-radius: 3px;
+  border-bottom-left-radius: 3px;
+  padding-left: 5px;
+  border: 1px solid #88976D;
 }
 .editShiftInputArea button {
   flex: 1;
+  height: 100%;
+  border-top-right-radius: 3px;
+  border-bottom-right-radius: 3px;
+  background-color: #88976D;
+  color: #EEF0EA;
+  font-size: 1.4rem;
+  border: 1px solid #88976D;
+}
+.editShiftInputArea button:hover {
+  color: #fff;
+  background-color: #556B2F;
+}
+
+.closeEditShiftsBtn {
+  flex: 1;
+  flex-basis: 2rem;
+  margin-top: 10px;
+  background-color: #88976D;
+  border-radius: 5px;
+  border: none;
+  width: 35%;
+  color: #EEF0EA;
+  font-size: 1.4rem;
+}
+.closeEditShiftsBtn:hover {
+  background-color: #556B2F;
+  color: #fff;
 }
 
 .peopleSettings {
