--- a/src/styles/_header.sass
+++ b/src/styles/_header.sass
@@ -162,10 +162,13 @@ header
   min-width: 10rem
   box-shadow: 0 0.5rem 1rem 0 rgba(0,0,0,0.2)
   z-index: 1
-  a
-    color: $black
+  button
+    color: $olive
     padding: 0.75rem 1rem
-    text-decoration: none
+    border: none
+    width: 100%
     display: block
+    font-size: 1.2rem
     &:hover
       background-color: $header-dropdown-hover
+      color: $white
