finished initial export to excel feature

--- a/src/styles/_grid.sass
+++ b/src/styles/_grid.sass
@@ -217,6 +217,7 @@ $weekend-blue: #eaf7ff
   margin-right: 0.2rem
   height: 100%
   float: left
+  border: none
   border-radius: 3px
   width: 70%
 
