--- a/src/styles/_grid.sass
+++ b/src/styles/_grid.sass
@@ -217,7 +217,7 @@ $weekend-blue: #eaf7ff
   margin-right: 0.2rem
   height: 100%
   float: left
-  border: none
+  border: 1px solid $olive-grey
   border-radius: 3px
   width: 70%
 
