added meetings reducer and sample data. backlog 29, 32, 34, 31, 35. items 12, 13, and 33 are in progress.

--- a/src/styles/_header.sass
+++ b/src/styles/_header.sass
@@ -24,14 +24,14 @@ $vashti: #fae5e5
 $weekend-blue: #eaf7ff
 
 //palettes
-$header-bkg: $olive-grey
-$header-dropdown-bkg: $olive-grey
-$header-icons: $light-olive
-$header-circle-future: $light-olive
-$header-dropdown-hover: $light-olive
+$header-bkg: $light-grey
+$header-dropdown-bkg: $light-grey
+$header-icons: $dark-olive
+$header-circle-future: $dark-olive
+$header-dropdown-hover: $medium-grey
 $header-circle-active: $light-ruby
 $header-icons-active: $light-ruby
-$header-circle-past: $light-grey
+$header-circle-past: $olive-grey
 
 
 //header
@@ -163,7 +163,7 @@ header
   box-shadow: 0 0.5rem 1rem 0 rgba(0,0,0,0.2)
   z-index: 1
   button
-    color: $olive
+    color: $dark-olive
     padding: 0.75rem 1rem
     border: none
     width: 100%
