--- a/src/styles/_rightMenus.sass
+++ b/src/styles/_rightMenus.sass
@@ -2,6 +2,7 @@
 ////colors
 $red: #b2001d
 $white: #fff
+$black: #000
 $dark-grey: #333
 $medium-grey: #898989
 $light-grey: #dddddd
@@ -117,9 +118,9 @@ aside
   .switchBtn 
     width: 100%
     height: 3rem
-    border: 0.0625rem solid $olive
-    background-color: $light-olive
-    color: $white
+    border: 0.0625rem solid $medium-grey
+    background-color: $light-grey
+    color: $dark-olive
     text-align: left
     font-size: 1.2em
     i
