--- a/src/styles/_grid.sass
+++ b/src/styles/_grid.sass
@@ -402,3 +402,20 @@ $weekend-blue: #eaf7ff
 .personTab
   &:hover
     background-color: $medium-grey 
+
+.meetingSettings
+  position: absolute
+  top: 200px
+  left: 25%
+  width: 650px
+  padding: 50px
+  z-index: 8
+  background-color: $white
+  // border-radius: 12.5%
+  box-shadow: 0 0.5rem 1rem 0 rgba(0,0,0,0.2)
+  display: flex
+  flex-direction: column
+  justify-content: space-around
+  align-items: center
+  &.hidden
+    display: none
