--- a/src/styles/_grid.sass
+++ b/src/styles/_grid.sass
@@ -85,6 +85,7 @@ $weekend-blue: #eaf7ff
   display: inline-block
   border-bottom: 0.0625rem solid $light-grey
   border-left: 0.0625rem solid $light-grey
+  overflow: auto
   // border-top-width: 0
   // border-right-width: 0
 
@@ -92,6 +93,8 @@ $weekend-blue: #eaf7ff
   width: 100%
   height: 100%
   display: flex
+  min-width: min-content
+  min-height: min-content
   flex-direction: row
   justify-content: flex-start
   align-items: center
@@ -99,10 +102,10 @@ $weekend-blue: #eaf7ff
 .classicGridDateCol
   width: 6rem
   height: 100%
-  display: flex
-  flex-direction: column
-  justify-content: flex-start
-  align-items: center
+  // display: flex
+  // flex-direction: column
+  // justify-content: flex-start
+  // align-items: center
   border-right: 0.0625rem solid $light-grey
   // border: 0.0625rem solid $light-grey
   // border-top-width: 0
@@ -113,56 +116,66 @@ $weekend-blue: #eaf7ff
 
 
 .classicGridPersonCol
-  width: 6rem
+  width: 6.3rem
   height: 100%
-  display: flex
-  flex-direction: column
-  justify-content: flex-start
-  align-items: center
-  border-right: 0.0625rem solid $light-grey
-  // border: 0.0625rem solid $light-grey
-  // margin-left: 0.2rem
 
-.classicGridCell, .classicGridPersonName, .classicGridDate, .classicGridMonthName
-  flex: 1
-  // flex-basis: 56rem
+.AM,.PM, .classicGridPersonName, .classicGridDayName, .classicGridMonthName, .classicGridDayNum
+  height: 1.5rem
   width: 100%
   text-align: center
-  font-size: 0.9rem
+  font-size: 0.8rem
+  border-right: 0.0625rem solid $light-grey
 
 .classicGridPersonName
   border-bottom: 0.0625rem solid $light-grey
-  flex: 1.6
   overflow: hidden
   font-size: 1.1rem
 
 .classicGridMonthName
   border-bottom: 0.0625rem solid $light-grey
-  flex: 1.6
   font-size: 1.1rem
-
-// .classicGridCell:nth-child(odd)
-//   background-color: $light-grey
-  
-// .classicGridDate:nth-child(odd)
-//   background-color: $light-grey
 
 .classicGridCell
   border-bottom: 0.0625rem solid $light-grey
   position: relative
   &.weekend
     background-color: $olive-grey
-  &:hover
-    background-color: $medium-grey
-    color: $white
 
 .classicGridDate
   border-bottom: 0.0625rem solid $light-grey
   &.weekend
     background-color: $olive-grey
 
+.classicGridDate:last-child
+  border-bottom: none
 
+.AM
+  margin: 0
+  padding: 0
+  border-bottom: 0.0625rem solid $light-grey
+  &:hover
+    background-color: $medium-grey
+    color: $white
+.PM
+  margin: 0
+  padding: 0
+  &:hover
+    background-color: $medium-grey
+    color: $white
 
+.classicGridCell:last-child
+  border-bottom: none
+
+.classicGridDayNum
+  border-bottom: 0.0625rem solid $white
+  margin: 0
+  padding: 0
+  &.weekend
+    border-bottom-color: $olive-grey
+
+.classicGridDayName
+  margin: 0
+  padding: 0
 
 //modal
 .modal
@@ -190,7 +203,7 @@ $weekend-blue: #eaf7ff
   bottom: 1.25rem
   color: #000000
   width: 10rem
-  height: 7.5rem
+  height: 4rem
   padding: 0.5rem
   background-color: $white
   border-radius: 0.1875rem
